setup app for Heroku

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,8 +12,8 @@
         <h1>{{>header}}</h1>
         <p>Use this site to get your weather</p>
         <form>
-            <input type="text" placeholder="location" />
-            <button>Search</button>
+            <input type="text" placeholder="location" id="input" />
+            <button id="search-btn">Search</button>
             <p id="messageOne"></p>
             <p id="messageTwo"></p>
         </form>
