--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,37 +1,48 @@
-body{
-    color:#333333;
-    font-family: arial;
-    max-width: 650px;
-    margin:0 auto;
-    padding:0 16px;
+body {
+  color: #333333;
+  font-family: arial;
+  max-width: 650px;
+  margin: 0 auto;
+  padding: 0 16px;
 
-    display:flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
-footer{
-    color:#888888;
-    border-top: 1px solid #eeeeee;
-    margin-top: 16px;
-    padding:16px 0;
+footer {
+  color: #888888;
+  border-top: 1px solid #eeeeee;
+  margin-top: 16px;
+  padding: 16px 0;
 }
-header{
-    margin-top:16px;
-    margin-bottom: 48px;
+header {
+  margin-top: 16px;
+  margin-bottom: 48px;
 }
-h1{
-    font-size: 64px;
-    margin-bottom: 16px;
+h1 {
+  font-size: 64px;
+  margin-bottom: 16px;
 }
-header a{
-    color:#888888;
-    margin-right: 16px;
-    text-decoration: none;
-    font-size: 24px;
+header a {
+  color: #888888;
+  margin-right: 16px;
+  text-decoration: none;
+  font-size: 24px;
 }
-.portrait{
-    width: 250px;;
+.portrait {
+  width: 250px;
 }
-.main-content{
- flex-grow: 1;
+.main-content {
+  flex-grow: 1;
+}
+
+#input {
+  padding: 3px 2px;
+}
+
+#search-btn {
+  background-color: #333;
+  border: none;
+  padding: 5px 3px;
+  color: #eee;
 }
