--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,6 +5,7 @@
     <title>Weather</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
