--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>404</title>
-        <link rel="icon" href="/img/weather.png">
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <div class="main-content">
-             {{>header}}
+
+<head>
+    <title>404</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="main-content">
+        {{>header}}
         <p>{{error}}</p>
-        </div>
-       
-        {{>footer}}
-    </body>
+    </div>
+
+    {{>footer}}
+</body>
+
 </html>
