--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,16 +1,20 @@
-<!DOCTYPE html>     
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>About</title>
-        <link rel="icon" href="/img/weather.png">
-        <link rel="stylesheet" href="./css/style.css">
-    </head>
-    <body>
-        <div class="main-content">
-              <h1>{{>header}}</h1>
-        <img src="/img/pawel-czerwinski-KskMZa4RXAM-unsplash.jpg" class="portrait"/>
+
+<head>
+    <title>About</title>
+    <link rel="icon" href="/img/weather.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <div class="main-content">
+        <h1>{{>header}}</h1>
+        <img src="/img/pawel-czerwinski-KskMZa4RXAM-unsplash.jpg" class="portrait" />
         <p>Created by {{name}}</p>
-        </div> 
-        {{>footer}}
-    </body>
+    </div>
+    {{>footer}}
+</body>
+
 </html>
