--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         <h1>{{>header}}</h1>
-        <p>Use this site to get your weather</p>
+        <p>Use this site to get your weather forecast!</p>
         <form>
             <input type="text" placeholder="location" id="input" />
             <button id="search-btn">Search</button>
