added my picture

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,9 @@
 <body>
     <div class="main-content">
         <h1>{{>header}}</h1>
-        <img src="/img/pawel-czerwinski-KskMZa4RXAM-unsplash.jpg" class="portrait" />
+        <p>This site was created by Alexander Adetola Aguniade. It uses data from mapbox.com and openweathermap.com!</p>
+        {{!-- <img src="/img/pawel-czerwinski-KskMZa4RXAM-unsplash.jpg" class="portrait" /> --}}
+        <img src="/img/me.png" class="portrait" />
         <p>Created by {{name}}</p>
     </div>
     {{>footer}}
