--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Help</title>
+    <title>Contact</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
